--- a/GoodFood/Application/Base.lproj/Main.storyboard
+++ b/GoodFood/Application/Base.lproj/Main.storyboard
@@ -3,26 +3,120 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Search View Controller-->
+        <!--Поиск-->
         <scene sceneID="dlN-zR-Go8">
             <objects>
                 <viewController id="gth-pU-XZN" customClass="SearchViewController" customModule="GoodFood" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9P6-FR-jk3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="zbh-cQ-10M">
+                                <rect key="frame" x="0.0" y="88" width="414" height="51"/>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TAp-iS-eb8">
+                                <rect key="frame" x="0.0" y="139" width="414" height="674"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SearchCell" rowHeight="130" id="NEs-hD-8wv" customClass="SearchCell" customModule="GoodFood" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="130"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="NEs-hD-8wv" id="CFX-u9-aFZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="130"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="R9u-5d-tcs">
+                                                    <rect key="frame" x="20" y="13" width="100" height="104"/>
+                                                    <color key="tintColor" red="0.90878041590000003" green="0.90878041590000003" blue="0.90878041590000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="hBs-p4-ghq"/>
+                                                    </constraints>
+                                                    <imageReference key="image" image="photo.fill" catalog="system" symbolScale="large"/>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="iMh-Er-aJV">
+                                                    <rect key="frame" x="135" y="14" width="259" height="102"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Название" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jLZ-ZS-qvY">
+                                                            <rect key="frame" x="0.0" y="0.0" width="259" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Сложность" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GE1-uB-TMC">
+                                                            <rect key="frame" x="0.0" y="26" width="259" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Время " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LST-Rl-gBs">
+                                                            <rect key="frame" x="0.0" y="52" width="259" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YTX-ad-q7h">
+                                                            <rect key="frame" x="0.0" y="78" width="259" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="100" id="pi8-qv-zdf"/>
+                                                    </constraints>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="iMh-Er-aJV" secondAttribute="bottom" constant="3" id="8sN-ml-T67"/>
+                                                <constraint firstItem="iMh-Er-aJV" firstAttribute="leading" secondItem="R9u-5d-tcs" secondAttribute="trailing" constant="15" id="D8B-qD-eVR"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="R9u-5d-tcs" secondAttribute="bottom" constant="3" id="Kaw-1Y-EAK"/>
+                                                <constraint firstItem="R9u-5d-tcs" firstAttribute="top" secondItem="CFX-u9-aFZ" secondAttribute="topMargin" constant="3" id="PO0-Dk-nca"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="iMh-Er-aJV" secondAttribute="trailing" id="Vcc-IS-DTK"/>
+                                                <constraint firstItem="iMh-Er-aJV" firstAttribute="top" secondItem="CFX-u9-aFZ" secondAttribute="topMargin" constant="3" id="gX2-9B-DVj"/>
+                                                <constraint firstItem="R9u-5d-tcs" firstAttribute="leading" secondItem="CFX-u9-aFZ" secondAttribute="leadingMargin" id="l4e-1i-fEu"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="difficulty" destination="GE1-uB-TMC" id="qoR-Mc-zqY"/>
+                                            <outlet property="imageOfDish" destination="R9u-5d-tcs" id="p6l-vb-O7Z"/>
+                                            <outlet property="name" destination="jLZ-ZS-qvY" id="hUi-Fe-TdH"/>
+                                            <outlet property="rating" destination="YTX-ad-q7h" id="UJk-Lm-6no"/>
+                                            <outlet property="time" destination="LST-Rl-gBs" id="1Gf-gK-j3y"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <sections/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="ole-dn-5el"/>
-                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="TAp-iS-eb8" firstAttribute="bottom" secondItem="ole-dn-5el" secondAttribute="bottom" id="33j-ni-fAw"/>
+                            <constraint firstItem="TAp-iS-eb8" firstAttribute="leading" secondItem="ole-dn-5el" secondAttribute="leading" id="EIP-DO-DPd"/>
+                            <constraint firstItem="zbh-cQ-10M" firstAttribute="leading" secondItem="ole-dn-5el" secondAttribute="leading" id="SZf-Ls-fSa"/>
+                            <constraint firstItem="zbh-cQ-10M" firstAttribute="trailing" secondItem="ole-dn-5el" secondAttribute="trailing" id="Xig-Pa-PVS"/>
+                            <constraint firstItem="TAp-iS-eb8" firstAttribute="trailing" secondItem="ole-dn-5el" secondAttribute="trailing" id="aEM-kS-NYZ"/>
+                            <constraint firstItem="TAp-iS-eb8" firstAttribute="top" secondItem="zbh-cQ-10M" secondAttribute="bottom" id="eyq-vX-OC8"/>
+                            <constraint firstItem="zbh-cQ-10M" firstAttribute="top" secondItem="ole-dn-5el" secondAttribute="top" id="lkT-pN-MVq"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="lV6-0z-jaE"/>
+                    <navigationItem key="navigationItem" title="Поиск" id="lV6-0z-jaE"/>
+                    <connections>
+                        <outlet property="searchBar" destination="zbh-cQ-10M" id="tmR-GF-61D"/>
+                        <outlet property="tableView" destination="TAp-iS-eb8" id="kvW-bO-Uk6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9iX-JY-A5z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-341" y="1598"/>
+            <point key="canvasLocation" x="-342.02898550724638" y="1597.7678571428571"/>
         </scene>
         <!--Камера-->
         <scene sceneID="EzS-4M-eex">
@@ -199,8 +293,9 @@
         <image name="Vector-1" width="22" height="22"/>
         <image name="Vector-2" width="15" height="20"/>
         <image name="Vector-3" width="24" height="23"/>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="photo.fill" catalog="system" width="128" height="93"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
