--- a/GoodFood/Application/Base.lproj/Main.storyboard
+++ b/GoodFood/Application/Base.lproj/Main.storyboard
@@ -17,13 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="zbh-cQ-10M">
-                                <rect key="frame" x="0.0" y="88" width="414" height="51"/>
-                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TAp-iS-eb8">
-                                <rect key="frame" x="0.0" y="139" width="414" height="674"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SearchCell" rowHeight="130" id="NEs-hD-8wv" customClass="SearchCell" customModule="GoodFood" customModuleProvider="target">
@@ -99,18 +94,14 @@
                         <viewLayoutGuide key="safeArea" id="ole-dn-5el"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="TAp-iS-eb8" firstAttribute="bottom" secondItem="ole-dn-5el" secondAttribute="bottom" id="33j-ni-fAw"/>
-                            <constraint firstItem="TAp-iS-eb8" firstAttribute="leading" secondItem="ole-dn-5el" secondAttribute="leading" id="EIP-DO-DPd"/>
-                            <constraint firstItem="zbh-cQ-10M" firstAttribute="leading" secondItem="ole-dn-5el" secondAttribute="leading" id="SZf-Ls-fSa"/>
-                            <constraint firstItem="zbh-cQ-10M" firstAttribute="trailing" secondItem="ole-dn-5el" secondAttribute="trailing" id="Xig-Pa-PVS"/>
-                            <constraint firstItem="TAp-iS-eb8" firstAttribute="trailing" secondItem="ole-dn-5el" secondAttribute="trailing" id="aEM-kS-NYZ"/>
-                            <constraint firstItem="TAp-iS-eb8" firstAttribute="top" secondItem="zbh-cQ-10M" secondAttribute="bottom" id="eyq-vX-OC8"/>
-                            <constraint firstItem="zbh-cQ-10M" firstAttribute="top" secondItem="ole-dn-5el" secondAttribute="top" id="lkT-pN-MVq"/>
+                            <constraint firstItem="TAp-iS-eb8" firstAttribute="top" secondItem="ole-dn-5el" secondAttribute="top" id="06c-EQ-S4a"/>
+                            <constraint firstItem="TAp-iS-eb8" firstAttribute="trailing" secondItem="ole-dn-5el" secondAttribute="trailing" id="pOy-Yd-l4L"/>
+                            <constraint firstItem="TAp-iS-eb8" firstAttribute="leading" secondItem="ole-dn-5el" secondAttribute="leading" id="skQ-Mw-12l"/>
+                            <constraint firstItem="TAp-iS-eb8" firstAttribute="bottom" secondItem="ole-dn-5el" secondAttribute="bottom" id="tOR-4i-TJT"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Поиск" id="lV6-0z-jaE"/>
                     <connections>
-                        <outlet property="searchBar" destination="zbh-cQ-10M" id="tmR-GF-61D"/>
                         <outlet property="tableView" destination="TAp-iS-eb8" id="kvW-bO-Uk6"/>
                     </connections>
                 </viewController>
