--- a/GoodFood/Search/View/SearchCell.xib
+++ b/GoodFood/Search/View/SearchCell.xib
@@ -9,36 +9,36 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="SearchCell" customModule="GoodFood" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="95"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="127" id="KGk-i7-Jjw" customClass="SearchCell" customModule="GoodFood" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="122"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="95"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="122"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ERs-IC-ygd">
-                        <rect key="frame" x="125" y="5" width="185" height="96"/>
+                        <rect key="frame" x="125" y="5" width="185" height="112"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Название" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c5B-ma-dgu">
-                                <rect key="frame" x="0.0" y="0.0" width="185" height="24"/>
+                                <rect key="frame" x="0.0" y="0.0" width="185" height="28"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Сложность" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2zL-hr-kGZ">
-                                <rect key="frame" x="0.0" y="24" width="185" height="24"/>
+                                <rect key="frame" x="0.0" y="28" width="185" height="28"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Время" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VUY-ob-8H2">
-                                <rect key="frame" x="0.0" y="48" width="185" height="24"/>
+                                <rect key="frame" x="0.0" y="56" width="185" height="28"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPI-sq-Qef">
-                                <rect key="frame" x="0.0" y="72" width="185" height="24"/>
+                                <rect key="frame" x="0.0" y="84" width="185" height="28"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -46,7 +46,7 @@
                         </subviews>
                     </stackView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QIj-Yc-UUs">
-                        <rect key="frame" x="10" y="10" width="100" height="100"/>
+                        <rect key="frame" x="10" y="12" width="100" height="100"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="100" id="R67-XT-uD9"/>
                             <constraint firstAttribute="width" constant="100" id="vTI-sv-0cd"/>
@@ -60,7 +60,7 @@
                     <constraint firstItem="ERs-IC-ygd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="cpL-4o-vNP"/>
                     <constraint firstAttribute="bottom" secondItem="QIj-Yc-UUs" secondAttribute="bottom" constant="10" id="gJp-Ui-e8z"/>
                     <constraint firstAttribute="bottom" secondItem="ERs-IC-ygd" secondAttribute="bottom" constant="5" id="rw1-mp-oAg"/>
-                    <constraint firstItem="QIj-Yc-UUs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="xL2-wB-8Hs"/>
+                    <constraint firstItem="QIj-Yc-UUs" firstAttribute="top" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="xL2-wB-8Hs"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -71,7 +71,7 @@
                 <outlet property="rating" destination="LPI-sq-Qef" id="Xgy-s2-yWV"/>
                 <outlet property="time" destination="VUY-ob-8H2" id="2tn-u0-tXD"/>
             </connections>
-            <point key="canvasLocation" x="44.927536231884062" y="80.691964285714278"/>
+            <point key="canvasLocation" x="44.927536231884062" y="89.732142857142847"/>
         </tableViewCell>
     </objects>
 </document>
